# notiman-cpp

./: .gitignore  CMakeLists.txt  README.md  build.bat
.omc/: autopilot-final-report.md  phase5-6-complete.md  phase5-6-plan.md
.omc/autopilot/: plan.md  spec.md
.omc/sessions/: 166d1e39-d16f-4cb9-b62d-09b2ceafe30d.json  599f8f04-91d4-4540-9e7e-258a20d9b6f5.json  9d833432-ce51-47fb-bb62-0c749a7b76dc.json  ef992871-4c43-40d0-9d7d-402691d4cb9f.json
.omc/state/: agent-replay-166d1e39-d16f-4cb9-b62d-09b2ceafe30d.jsonl  agent-replay-599f8f04-91d4-4540-9e7e-258a20d9b6f5.jsonl  agent-replay-9d833432-ce51-47fb-bb62-0c749a7b76dc.jsonl  agent-replay-db1718dc-b748-48d3-90c7-558224409cc8.jsonl  agent-replay-ef992871-4c43-40d0-9d7d-402691d4cb9f.jsonl  agent-replay-f6441435-72cc-4eb6-8b23-5c2bc4eeb9c0.jsonl  subagent-tracking.json
config/: default.ini  default.toml  proxy.ini
src/cli/: CMakeLists.txt  main.cpp
src/host/: CMakeLists.txt  acrylic.cpp  acrylic.h  icon_paths.h  main.cpp  render_utils.cpp  render_utils.h  toast_manager.cpp  toast_manager.h  toast_window.cpp  toast_window.h
src/proxy/: CMakeLists.txt  main.cpp  proxy_config.cpp  proxy_config.h
src/shared/: CLAUDE.md  CMakeLists.txt  config.cpp  config.h  config_watcher.cpp  config_watcher.h  corner.cpp  corner.h  hook_parser.cpp  hook_parser.h  host_ipc.cpp  host_ipc.h  icon.cpp  icon.h  payload.cpp  payload.h  positioning.cpp  positioning.h  tray_icon.cpp  tray_icon.h
